# agent-software-developer-skill

./: LICENSE  SKILL.md  _config.py  audit.md  baseline.md  constraints.md  containers.py  evaluate.md  implement.md  loop-contract.md  models.md  pyproject.toml  rca.md  research.md
agent_implementation_skill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
agents/: agent-monitor.md  alignment-judge.md  alignment-output-adjudicator.md  bridge-agent.md  bridge-tools.md  claim-extractor.md  codebase-governance-assessor.md  consequence-note-triager.md  coordination-fixer.md  coordination-planner.md  domain-researcher.md  exception-handler.md  execution-optimizer.md  impact-analyzer.md  impact-output-normalizer.md  implementation-strategist.md  intake-triage.md  integration-proposer.md  intent-judge.md  intent-pack-generator.md  intent-triager.md  microstrategy-writer.md  monitor.md  orchestrator.md  philosophy-bootstrap-prompter.md  philosophy-distiller.md  philosophy-expander.md  philosophy-source-selector.md  philosophy-source-verifier.md  post-implementation-assessor.md  problem-expander.md  qa-interceptor.md  qa-monitor.md  research-planner.md  research-synthesizer.md  research-verifier.md  risk-assessor.md  scan-codemap-builder.md  scan-codemap-freshness-judge.md  scan-related-files-adjudicator.md  (+8 more)
bootstrap/: __init__.py  routes.py
coordination/: __init__.py  coordination_executor.py  coordination_loop.py  coordination_planner.py  coordination_problem_resolver.py  cross_section.py  loop_execution.py  loop_planning.py  loop_problems.py  routes.py  (+3 more)
(+830 files in other folders)
